--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://app.powerbi.com/groups/718194c6-92bc-40a8-b141-95676a00f930/reports/4e7ad0ee-f515-428a-a420-036231b1f554/ReportSection?experience=power-bi" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -496,15 +496,15 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Mentored Students</span>
+                <strong class="number" data-number="50">0</strong>
+                <span>Mentored Friends</span>
               </div>
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="500">0</strong>
+                <strong class="number" data-number="100">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
