update google form

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>Have a<span> Question?  </span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSf4mTf30kuL2rm45Hv3F_7_rleHMXBQhS5-fEorfvYYo0Zh5Q/viewform?usp=sharing" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/VwcARZAnSiaYzgHz6" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
 				</div>
 			</div>
 				<br>
